# opencv_demo

./: CMakeLists.txt  demo.cpp
